--- a/Commands of List.ipynb
+++ b/Commands of List.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "86cf21e3-3b6d-48a7-be0f-26de832dab9e",
    "metadata": {},
    "outputs": [
@@ -146,41 +146,41 @@
        "[4, 5, 6, 7, 8, 9, 89]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aa.sort()    //مرتب سازی\n",
+    "aa.sort()    #مرتب سازی\n",
     "aa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "8c35679b-fef2-42e4-82a1-e8bb4f8ba554",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['python', 'yellow', 'blue', 44, 11, 7, 6, 5, 4, 3, 2, 2, 1, 1, 1]"
+       "[1, 1, 1, 2, 2, 3, 4, 5, 6, 7, 11, 44, 'blue', 'yellow', 'python']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.reverse()   //برعکس کردن اعضا\n",
+    "a.reverse()   #برعکس کردن اعضا\n",
     "a\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "b13f259c-3862-44b6-a286-b890b634e808",
    "metadata": {},
    "outputs": [
@@ -190,18 +190,18 @@
        "3"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.count(1)   //شمارش تعداد عدد دلخواه"
+    "a.count(1)   #شمارش تعداد عدد دلخواه"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "9acca785-b3af-489b-baa4-0081eb9a7aa1",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "15"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +222,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9190556f-3bf2-4a16-94e3-2be64fa67970",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a\u001b[38;5;241m.\u001b[39mextend(\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      2\u001b[0m a\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "a.extend('bl')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8164ccd6-a5be-4340-84ec-a985a10cad0a",
    "metadata": {},
    "outputs": [],
    "source": []
